--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ Flask==2.0.2
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
-numpy==1.21.3
+numpy
 packaging==21.0
-pandas @ file:///D:/New%20Downloads/pandas-1.3.4-cp310-cp310-win_amd64.whl
+pandas
 Pillow==8.4.0
 platformdirs==2.4.0
 pyparsing==3.0.3
